2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.x3d: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* SpotLight.wrl:
	* PointLight.wrl: 

2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>

	* PointLight.wrl:
	* DirectionalLight.wrl: 

2014-08-06  Holger Seelig  <holger.seelig@yahoo.de>

	* mib.wrl:
	* car.wrl:
	* txt.wrl:
	* pack.wrl:
	* book.wrl:
	* fire.wrl:
	* deco.wrl:
	* index.wrl:
	* scene.wrl:
	* bogen.wrl:
	* off.wrl:
	* intro.wrl:
	* mummy.wrl:
	* mbenz.wrl:
	* bicman.wrl:
	* katze.wrl:
	* logo.wrl:
	* next.wrl:
	* people.wrl:
	* warn.wrl:
	* level1.wrl:
	* benhur.wrl:
	* mothra.wrl:
	* statue.wrl:
	* tresen.wrl:
	* back.wrl:
	* walls.wrl:
	* else-bg.wrl:
	* ubahn.wrl:
	* train.wrl:
	* dracula.wrl:
	* dollars.wrl:
	* tiffany.wrl:
	* pololow.wrl:
	* shirt.wrl:
	* index.wrl:
	* licht.wrl:
	* side.wrl:
	* jet.wrl:
	* frame.wrl:
	* index.wrl:
	* haken.wrl:
	* gate.wrl:
	* gate.wrl:
	* index__3.wrl:
	* index__4.wrl:
	* cinemaxx.wrl:
	* index__2.wrl:
	* tactix.wrl:
	* bgdeco.wrl:
	* index.wrl:
	* hudflame.wrl:
	* building.wrl:
	* index__5.wrl:
	* warp.wrl:
	* border.wrl:
	* index.wrl:
	* index.wrl:
	* invaders.wrl:
	* tower.wrl:
	* saule.wrl:
	* infowall.wrl:
	* shirt4.wrl:
	* shirt3.wrl:
	* shirt2.wrl:
	* shirt1.wrl:
	* prospekt.wrl:
	* index__6.wrl:
	* clockwork.wrl:
	* else_demo.wrl:
	* index.wrl:
	* ham-gurke.wrl:
	* wall6.wrl:
	* ass.wrl:
	* wall3.wrl:
	* 3-innen.wrl:
	* index.wrl:
	* schacht.wrl:
	* glanz.wrl:
	* poster2.wrl:
	* poster1.wrl:
	* index.wrl:
	* infowall2.wrl:
	* lift-up.wrl:
	* tor.wrl:
	* helpScout.wrl:
	* mummy_snd.wrl:
	* wall4.wrl:
	* station.wrl:
	* index.wrl:
	* door.wrl:
	* ham-tomate.wrl:
	* drehad.wrl:
	* beamer.wrl:
	* ham-cheese.wrl:
	* ham-deckel.wrl:
	* windows.wrl:
	* legL.wrl:
	* legR.wrl:
	* stationT.wrl:
	* showcase.wrl:
	* runtrain.wrl:
	* index.wrl:
	* clothing.wrl:
	* index.wrl:
	* fahrkorb.wrl:
	* etage_io.wrl:
	* tvset.wrl:
	* benzoffice.wrl:
	* film.wrl:
	* body.wrl:
	* index.wrl: