@@ -1,22 +1,37 @@
-#VRML V2.0 utf8
+#VRML V2.0 utf8 Titania V0.7.3
 
 PROTO GoldenSphere [ ]
 {
-  Shape {
-    appearance Appearance {
-      material Material {
+  Sphere { }
+}
+
+PROTO GoldenShape [ ]
+{
+  PROTO GoldenAppearance [ ]
+  {
+    PROTO GoldenMaterial [ ]
+    {
+      Material {
         ambientIntensity 0.25
         diffuseColor 0.384722 0.266993 0
         specularColor 0.757576 0.738847 0.590386
         shininess 0.0666667
       }
     }
-    geometry Sphere { }
+
+    Appearance {
+      material GoldenMaterial { }
+    }
+  }
+
+  Shape {
+    appearance GoldenAppearance { }
+    geometry GoldenSphere { }
   }
 }
 
 DEF GoldenSphere Transform {
-  children GoldenSphere { }
+  children GoldenShape { }
 }
 
 EXPORT GoldenSphere
