@@ -1,17 +1,45 @@
-#X3D V2.0 utf8 Titania
+#VRML V2.0 utf8 Titania V0.7.3
 
-PROTO Rotor [
-  inputOutput SFTime     cycleInterval 1
-  inputOutput SFBool     loop FALSE
-  outputOnly  SFRotation value_changed
+PROTO RotorTimeSensor [
+  exposedField SFTime  cycleInterval 1
+  exposedField SFBool  loop FALSE
+  eventOut     SFFloat fraction_changed
 ]
 {
-  DEF Timer TimeSensor {
+  TimeSensor {
+    cycleInterval IS cycleInterval
+    loop IS loop
+    fraction_changed IS fraction_changed
+  }
+}
+
+PROTO Rotor [
+  exposedField SFTime     cycleInterval 1
+  exposedField SFBool     loop FALSE
+  eventOut     SFRotation value_changed
+]
+{
+  PROTO RotorOrientationInterpolator [
+    eventIn      SFFloat    set_fraction
+    exposedField MFFloat    key [ ]
+    exposedField MFRotation keyValue [ ]
+    eventOut     SFRotation value_changed
+  ]
+  {
+    OrientationInterpolator {
+      set_fraction IS set_fraction
+      key IS key
+      keyValue IS keyValue
+      value_changed IS value_changed
+    }
+  }
+
+  DEF Timer RotorTimeSensor {
     cycleInterval IS cycleInterval
     loop IS loop
   }
 
-  DEF Rotator OrientationInterpolator {
+  DEF Rotator RotorOrientationInterpolator {
     key [ 0, 0.25, 0.5, 0.75, 1 ]
     keyValue [ 0 0 1 0, 0 0 1 1.5708, 0 0 1 3.14159, 0 0 1 4.71239, 0 0 1 0 ]
     value_changed IS value_changed
