@@ -1,3 +1,8 @@
+2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Rotor.wrl:
+	* GoldenSphere.wrl: 
+
 2014-08-07  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* OutlineEditor.x3d: 
